--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "watch": "sass sass/style.scss css/style.css --watch",
-    "compile-sass": "sass sass/style.scss css/style.css",
+    "watch": "sass site/src/sass/style.scss site/public/css/style.css --watch",
+    "compile": "sass site/src/sass/style.scss site/public/css/style.css",
     "test": "jest --verbose",
     "jestwatch": "jest --watchall --verbose",
     "prepare": "husky install"
